# open-egm4

./: ## Creating animations of soil cores out  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Untitled-1  Untitled-3  Untitled-4  build_web.sh  egm4-guide.org  egm4_data_20260114_182750.csv  egm4_data_20260114_190041.csv  egm4_data_20260114_201137.csv  egm4_data_20260114_202023.csv  egm4_data_20260114_202757.csv  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  screenlog.0  simulate_tui.py  tui_main.py
.github/workflows/: ci.yml  release.yml
src/: analysis.py  database.py  egm_interface.py  web_bridge.py
src/science/: flux.py
src/tui/: app.py  styles.tcss
src/tui/screens/: __init__.py  bigmode.py  confirm.py  connect.py  export.py  help.py  monitor.py  note.py
src/tui/widgets/: __init__.py  calendar.py  co2_chart.py  legend.py  log.py  stats.py
src/ui/: app_layout.py  components.py
tests/: test_parser.py
web/: index.html  main_web.py  pyscript.toml
wiki/: Exporting-Data.md  Home.md  Installation.md  Release-Process.md  User-Guide.md
