[project]
name = "open-egm4"
dynamic = ["version"]
description = "Terminal User Interface for the PP Systems EGM-4 Environmental Gas Monitor"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Morgan", email = "morgans@example.com"}
]
requires-python = ">=3.10"
keywords = ["egm4", "co2", "soil respiration", "tui", "serial", "environmental monitoring", "irga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.40.0",
    "textual-plotext>=0.2.0",
    "pyserial>=3.5",
]

[project.scripts]
open-egm4 = "src.tui.app:main"

[project.urls]
Homepage = "https://github.com/mmorgans/open-egm4"
Repository = "https://github.com/mmorgans/open-egm4"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.tui" = ["*.tcss", "*.css"]
"src" = ["*.tcss"]
